--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="main">
         <div class="top">
           <img class="image-main" src="./images/image-equilibrium.jpg" alt="" />
+          <div class="absolute">
+            <img class="absolute-img" src="./images/icon-view.svg" alt="" />
+          </div>
         </div>
         <div class="bottom">
           <div class="content">
