--- a/index.html
+++ b/index.html
@@ -16,36 +16,42 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <div class="container">
-      <div class="main">
-        <div class="top">
-          <img class="image-main" src="./images/image-equilibrium.jpg" alt="" />
-          <div class="absolute">
-            <img class="absolute-img" src="./images/icon-view.svg" alt="" />
-          </div>
-        </div>
-        <div class="bottom">
-          <div class="content">
-            <h2 class="title">Equilibrium #3429</h2>
-            <p class="para">
-              Our Equilibrium collection promotes balance and calm
-            </p>
-            <div class="icons">
-              <div class="left">
-                <span> <img src="./images/icon-ethereum.svg" alt="" /></span>
-                <span class="num">0.041ETH</span>
-              </div>
-              <div class="right">
-                <span><img src="./images/icon-clock.svg" alt="" /></span>
-                <span class="num">3 days left</span>
-              </div>
+    <div class="section">
+      <div class="container">
+        <div class="main">
+          <div class="top">
+            <img
+              class="image-main"
+              src="./images/image-equilibrium.jpg"
+              alt=""
+            />
+            <div class="absolute">
+              <img class="absolute-img" src="./images/icon-view.svg" alt="" />
             </div>
-            <div class="info">
-              <div class="info-content">
-                <img src="./images/image-avatar.png" alt="" />
-                <p class="para info-para">
-                  Creation of <span class="info-name">Jules Wyvern</span>
-                </p>
+          </div>
+          <div class="bottom">
+            <div class="content">
+              <h2 class="title">Equilibrium #3429</h2>
+              <p class="para">
+                Our Equilibrium collection promotes balance and calm
+              </p>
+              <div class="icons">
+                <div class="left">
+                  <span> <img src="./images/icon-ethereum.svg" alt="" /></span>
+                  <span class="num">0.041ETH</span>
+                </div>
+                <div class="right">
+                  <span><img src="./images/icon-clock.svg" alt="" /></span>
+                  <span class="num">3 days left</span>
+                </div>
+              </div>
+              <div class="info">
+                <div class="info-content">
+                  <img src="./images/image-avatar.png" alt="" />
+                  <p class="para info-para">
+                    Creation of <span class="info-name">Jules Wyvern</span>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
